# sms_produce

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  logger.conf  manage.py  pyproject.toml  setup.cfg  start_server.sh
api/alaris/: client.py
sms/: admin.py  forms.py  models.py  schema.py  task.py
sms/migrations/: 0001_initial.py  0002_alter_broadcast_id_alter_sender_id_alter_text_id.py  0003_alter_broadcast_run_count.py  0004_broadcast_sent_sms.py  0005_broadcast_phone_number_length.py  0006_alter_text_text.py  0007_remove_broadcast_prefix_prefix.py  0008_alter_prefix_prefix.py  0009_alter_broadcast_comment.py
sms_produce/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
staticfiles/: staticfiles.json
