[tool.poetry]
name = "sms-generator"
version = "0.1.0"
description = ""
authors = ["apolumestny <anpolumestny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
httpx = "^0.27.0"
django-extensions = "^3.2.3"
ipython = "^8.24.0"
django-environ = "^0.11.2"
celery = "^5.4.0"
redis = "^5.0.4"
django-celery-beat = "^2.6.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"
whitenoise = "^6.6.0"
pydantic = "^2.7.1"


[tool.poetry.group.test.dependencies]
flake8 = "^7.0.0"
isort = "^5.13.2"
flake8-print = "^5.0.0"
flake8-clean-block = "^0.1.2"
flake8-quotes = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
